# trundler

./: Cargo.toml  README.md
graphql-queries/webhooks/: get.graphql  subscriptions.graphql
graphql/queries/webhooks/: get.graphql  subscriptions.graphql
src/: lib.rs  main.rs  queries.rs
