[package]
name = "trundler"
version = "0.3.0"
edition = "2021"
description = "An unofficial SDK for Shopify's Admin API"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
graphql_client = "0.13"
serde = { version = "1", features = ["derive"] }
url = "2"

[dev-dependencies]
serde_json = "1.0"
# What's the issue with 0.11.18? It breaks everything
reqwest = { version = "=0.11.17", features = ["json"] }
tokio = { version = "1", features = ["full"] }